kubernetes/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prometheus.abshirabshir.co.uk
    cert-manager.io/cluster-issuer: letsencrypt-route53
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - prometheus.abshirabshir.co.uk
    secretName: prometheus-tls
  rules:
  - host: prometheus.abshirabshir.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
